Update docs, tests to cover htmlFormat.
